Target Java 17 (LTS) instead of 21 for wider consumer reach
pom now builds with maven.compiler.release=17 (enforces the 17 API, not just
the language level). Replaced the Java 21-only constructs the release flag
flagged:
- List.getFirst()/getLast() -> get(0) / get(size()-1)
- Math.clamp(v,min,max) -> Math.max(min, Math.min(max, v))
- List.removeFirst() -> remove(0)
- switch type-patterns (ViewableAdapter, Card.shortValue) -> if/else instanceof

CI now runs on JDK 17. Builds and tests green under --release 17; the quiz
reactor (app still targets 21) builds unchanged on a JDK 21.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>